--- a/css/style.css
+++ b/css/style.css
@@ -126,3 +126,41 @@ body {
   right: 0;
   left: 0;
 }
+
+@media screen and (max-width: 375px) {
+  body {
+    margin: 0;
+    width: 100vw;
+    height: auto;
+    font-family: "Red Hat Display", sans-serif;
+    background: hsl(225, 100%, 94%);
+    background-repeat: no-repeat;
+    background-size: 375px 340px;
+    background-image: url("../images/pattern-background-desktop.svg");
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    position: relative;
+  }
+  .card-container {
+    width: 350px;
+  }
+  .image-container {
+    width: 350px;
+  }
+
+  .price-card {
+    width: 305px;
+    margin: 0;
+  }
+
+  .price-card a {
+    margin-left: 70px;
+  }
+
+  .primary-button {
+    width: 305px;
+  }
+}
